stack1.orbit8.com/etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Fri Sep  2 23:05:08 2016
*nat
:PREROUTING ACCEPT [27:3167]
:INPUT ACCEPT [11:1784]
:OUTPUT ACCEPT [138:9210]
:POSTROUTING ACCEPT [138:9210]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A neutron-openvswi-snat -j neutron-openvswi-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-openvswi-snat
COMMIT
# Completed on Fri Sep  2 23:05:08 2016
# Generated by iptables-save v1.4.21 on Fri Sep  2 23:05:08 2016
*mangle
:PREROUTING ACCEPT [4368:552459]
:INPUT ACCEPT [4352:551076]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4500:376203]
:POSTROUTING ACCEPT [4500:376203]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-floatingip - [0:0]
:neutron-openvswi-mark - [0:0]
:neutron-openvswi-scope - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A INPUT -j neutron-openvswi-INPUT
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A neutron-openvswi-PREROUTING -j neutron-openvswi-mark
-A neutron-openvswi-PREROUTING -j neutron-openvswi-scope
-A neutron-openvswi-PREROUTING -m connmark ! --mark 0x0/0xffff0000 -j CONNMARK --restore-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-openvswi-PREROUTING -j neutron-openvswi-floatingip
-A neutron-openvswi-float-snat -m connmark --mark 0x0/0xffff0000 -j CONNMARK --save-mark --nfmask 0xffff0000 --ctmask 0xffff0000
COMMIT
# Completed on Fri Sep  2 23:05:08 2016
# Generated by iptables-save v1.4.21 on Fri Sep  2 23:05:08 2016
*raw
:PREROUTING ACCEPT [4365:552303]
:OUTPUT ACCEPT [4497:376047]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
COMMIT
# Completed on Fri Sep  2 23:05:08 2016
# Generated by iptables-save v1.4.21 on Fri Sep  2 23:05:08 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-scope - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 5666 -m comment --comment "001 nagios-nrpe incoming nagios_nrpe" -j ACCEPT
-A INPUT -j neutron-openvswi-INPUT
-A INPUT -s 10.1.13.11/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.11_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.11_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.11_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.11_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.11_10.1.13.251" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 5900:5999 -m comment --comment "001 nova compute incoming nova_compute" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.11_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.11_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.11_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.11_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.11_10.1.13.251" -j ACCEPT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-openvswi-OUTPUT
-A neutron-filter-top -j neutron-openvswi-local
-A neutron-openvswi-FORWARD -j neutron-openvswi-scope
-A neutron-openvswi-sg-chain -j ACCEPT
-A neutron-openvswi-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
COMMIT
# Completed on Fri Sep  2 23:05:08 2016
